@@ -20,13 +20,21 @@
  *
  *   Some ideas were taken from the source from BSMT2000 & AY8910
  *
- *   Note: No support yet for the 6Mhz version of the chip
+ *   The mixer can optionally mix every channel into a separate stream for testing (undef SINGLE_CHANNEL_MIXER)
+ *
+ *   TODO: No support yet for the 6Mhz version of the chip (mainly the frequency tables missing)
  **********************************************************************************************/
+
 #include <stdio.h>
 #include <stdlib.h>
 #include <math.h>
 #include "driver.h"
 #include "m114s.h"
+
+#define SAMPLE_RATE 48000
+#define SINGLE_CHANNEL_MIXER // like on the real chip, mix all channels into one stream, undef for debugging purpose
+
+#define USE_FREQTABLE_FROM_MANUAL // undef to use a generated freqtable with 'correct' semitones
 
 #if 0
 #define LOG(x) printf x
@@ -59,7 +67,6 @@
 /* struct describing a single table */
 struct M114STable
 {
-		UINT32			sample_rate;				/* Current Sample Rate to play back table */
 		UINT8			reread;						/* # of times to re-read each byte from table */
         UINT32          position;                   /* current reading position for table */
         UINT32          start_address;				/* start address (offset into ROM) for table */
@@ -98,6 +105,7 @@ struct M114SChannel
 		int				end_of_table;					/* End of Table Flag */
 		struct M114STable table1;						/* Table 1 Data */
 		struct M114STable table2;						/* Table 2 Data */
+		UINT32			incr;							/* Current Sample Rate/Step size increase to play back table */
 };
 
 /* struct describing the entire M114S chip */
@@ -165,7 +173,7 @@ static const int mode_to_len_t2[8][8] = {
 {16,16,16, 16, 32, 64, 128, 256 },	//Mode 7
 };
 
-#if 0
+#ifdef USE_FREQTABLE_FROM_MANUAL
 /* Frequency Table for a 4Mhz Clocked Chip */
 static const double freqtable4Mhz[0xff] = {
  1016.78,1021.45,1026.69,1031.46,1036.27,1041.67,1044.39,1045.48,
@@ -209,49 +217,34 @@ static const double freqtable4Mhz[0xff] = {
 static const double freqtable4Mhz[0xff] = {
  1016.78,1021.45,1026.69,1031.46,1036.27,1041.67,1044.39,1045.48,
  1046.57,1047.67,1048.77,1051.52,1056.52,1061.57,1066.67,1071.81,	//0x00 - 0x0F
-
  1077.24,1082.19,1087.74,1092.79,1097.89,1103.61,1106.49,1107.65,
  1108.80,1109.97,1111.13,1114.05,1119.34,1124.69,1130.10,1135.54,	//0x10 - 0x1F
-
  1141.29,1146.54,1152.42,1157.77,1163.17,1169.24,1172.29,1173.51,
  1174.74,1175.97,1177.20,1180.29,1185.90,1191.57,1197.30,1203.07,	//0x20 - 0x2F
-
  1209.16,1214.72,1220.95,1226.62,1232.34,1238.76,1242.00,1243.29,
  1244.59,1245.90,1247.20,1250.47,1256.42,1262.43,1268.49,1274.60,	//0x30 - 0x3F
-
  1281.06,1286.95,1293.55,1299.56,1305.62,1312.42,1315.85,1317.22,
  1318.60,1319.98,1321.37,1324.83,1331.13,1337.49,1343.92,1350.40,	//0x40 - 0x4F
-
  1357.24,1363.47,1370.46,1376.83,1383.25,1390.46,1394.09,1395.55,
  1397.00,1398.47,1399.94,1403.61,1410.29,1417.03,1423.83,1430.70,	//0x50 - 0x5F
-
  1437.94,1444.55,1451.96,1457.07,1465.51,1473.14,1477.00,1478.53,
  1480.07,1481.63,1483.18,1486.99,1494.14,1501.29,1508.50,1515.77,	//0x60 - 0x6F
-
  1523.45,1530.45,1538.30,1545.44,1552.65,1560.74,1564.82,1566.45,
  1568.08,1569.73,1571.38,1575.50,1583.00,1590.56,1598.20,1605.90,	//0x70 - 0x7F
-
  1614.04,1621.45,1629.77,1637.34,1644.98,1653.55,1657.87,1659.60,
  1661.33,1663.07,1664.82,1669.18,1677.12,1685.14,1693.23,1701.39,	//0x80 - 0x8F
-
- 1710.01,1717.87,1726.69,1734.70,1742.79,1751.87,1756.45,1758.28,	//(2nd entry in manual shows 1781.21 but that's cleary wrong)
+ 1710.01,1717.87,1726.69,1734.70,1742.79,1751.87,1756.45,1758.28,
  1760.11,1761.96,1763.81,1768.44,1776.85,1785.34,1793.92,1802.56,	//0x90 - 0x9F
-
  1811.70,1820.02,1829.35,1837.85,1846.42,1856.05,1860.89,1862.83,
  1864.78,1866.74,1868.70,1873.60,1882.50,1891.50,1900.59,1909.75,	//0xA0 - 0xAF
-
  1919.43,1928.24,1938.13,1947.14,1956.22,1966.41,1971.55,1973.60,
  1975.66,1977.74,1979.81,1985.01,1994.44,2003.98,2013.61,2023.31,	//0xB0 - 0xBF
-
  2033.56,2042.90,2053.38,2062.92,2072.54,2083.34,2088.78,2090.96,
  2093.14,2095.34,2097.54,2103.04,2113.04,2123.14,2133.34,2143.62,	//0xC0 - 0xCF
-
  2154.48,2164.38,2175.48,2185.59,2195.78,2207.22,2212.99,2215.30,
  2217.60,2219.94,2222.27,2228.09,2238.69,2249.39,2260.20,2271.09,	//0xD0 - 0xDF
-
  2282.59,2293.08,2304.84,2315.55,2326.35,2338.47,2344.58,2347.02,
  2349.47,2351.94,2354.41,2360.58,2371.80,2383.14,2394.59,2406.13,	//0xE0 - 0xEF
-
  0,0,0,0,0,0,0,
  0,0,0,0,0,0,0,														//0xF0 - 0xFF (Special codes)
 };
@@ -286,24 +279,23 @@ static void build_vol_table(void)
 	 as necessary to match the Machine driver's output sample rate.
 
 ***********************************************************************************************/
-static INT16 read_sample(struct M114SChannel *channel, UINT32 sample_rate, UINT32 length)
+static INT16 read_sample(struct M114SChannel *channel, UINT32 length)
 {
-	if(channel->outpos < (length << FRAC_BITS))
+	UINT32 pos = channel->outpos >> FRAC_BITS;
+	if (pos < length)
 	{
-		UINT32 incr = (((unsigned long long)sample_rate) << FRAC_BITS) / Machine->sample_rate;
-		UINT32 pos = channel->outpos >> FRAC_BITS;
-		UINT32 frac = channel->outpos & FRAC_MASK;
+		INT32 frac = channel->outpos & FRAC_MASK;
 
 		// interpolate
 		INT16 val1 = channel->output[pos];
 		INT16 val2 = channel->output[MIN(pos + 1, length - 1)];
-		INT16 sample = (val1 * (INT32)(FRAC_ONE - frac) + val2 * (INT32)frac) >> FRAC_BITS;
+		INT16 sample = (val1 * (INT32)(FRAC_ONE - frac) + val2 * frac) >> FRAC_BITS;
 
-		channel->outpos += incr;
+		channel->outpos += channel->incr;
 		return sample;
 	}
 	else {
-		//printf("End of Table\n");
+		//LOG(("End of Table\n"));
 		channel->end_of_table++;
 		channel->outpos = 0;
 		return 0;
@@ -334,7 +326,7 @@ static void read_table(struct M114SChip *chip, struct M114SChannel *channel)
 	memset(&tb1,0,sizeof(tb1));
 	memset(&tb2,0,sizeof(tb2));
 
-	//printf("t1s = %d t2s = %d, l1=%d l2=%d, r1=%d, r2=%d, int = %d\n",t1start,t2start,lent1,lent2,rep1,rep2,intp);
+	//LOG(("t1s = %d t2s = %d, l1=%d l2=%d, r1=%d, r2=%d, int = %d\n",t1start,t2start,lent1,lent2,rep1,rep2,intp));
 
 	//Table1 is always larger, so use that as the size
 	//Scan Table 1
@@ -351,7 +343,7 @@ static void read_table(struct M114SChip *chip, struct M114SChannel *channel)
 
 	//Now Mix based on Interpolation Bits
 	for(i=0; i<lent1*rep1; i++)	{
-		double d = (tb1[i] * (intp + 1) / 16) + (tb2[i] * (15-intp) / 16);
+		double d = (tb1[i] * (intp + 1) / 16) + (tb2[i] * (15-intp) / 16); //!! increase precision?? -> not from the specs, but..
 
 		//Apply volume - If envelope - use volume step to calculate sample volume, otherwise, apply directly
 #if USE_VOL_ENVELOPE
@@ -364,80 +356,65 @@ static void read_table(struct M114SChip *chip, struct M114SChannel *channel)
 	}
 }
 
-#if USE_REAL_OUTPUTS
 /**********************************************************************************************
 
      m114s_update -- update the sound chip so that it is in sync with CPU execution
 
 ***********************************************************************************************/
 //Seems this sometimes still produces some static, but I don't know why!
-static void m114s_update(int num, INT16 **buffer, int samples)
+static void m114s_update(int num,
+#ifdef SINGLE_CHANNEL_MIXER 
+	INT16 *buffer,
+#else
+	INT16 **buffer,
+#endif
+	int samples)
 {
 	struct M114SChip *chip = &m114schip[num];
-	struct M114SChannel *channel;
-	INT16 sample;
-	INT32 accum[M114S_OUTPUT_CHANNELS];
-	int c;
+
 	while (samples > 0)
 	{
+#ifdef SINGLE_CHANNEL_MIXER 
+		INT32 accum = 0;
+#else
+		INT32 accum[M114S_OUTPUT_CHANNELS];
+#endif
+		int c;
+
+#ifndef SINGLE_CHANNEL_MIXER 
 		/* clear accum */
-		for( c = 0; c < M114S_OUTPUT_CHANNELS; c++)
+		for(c = 0; c < M114S_OUTPUT_CHANNELS; c++)
 			accum[c] = 0;
+#endif
 
 		/* loop over channels */
 		for (c = 0; c < M114S_CHANNELS; c++)
 		{
-			channel = &chip->channels[c];
+			struct M114SChannel *channel = &chip->channels[c];
 			/* Grab the next sample from the table data if the channel is active */
-			if(channel->active)	{
+			if(channel->active)
 				//We use Table 1 to drive everything, as Table 2 is really for mixing into Table 1..
-				sample = read_sample(channel, channel->table1.sample_rate, channel->table1.total_length);
 				//Mix the output of this channel to the appropriate output channel
-				accum[channel->regs.outputs] += sample;
-			}
+#ifdef SINGLE_CHANNEL_MIXER
+				accum
+#else
+				accum[channel->regs.outputs]
+#endif
+				+= read_sample(channel, channel->table1.total_length);
 		}
 
 		/* Update the buffer & Ensure we don't clip */
-		for( c = 0; c < M114S_OUTPUT_CHANNELS; c++)
-			*buffer[c]++ = (accum[c] < -16384) ? -16384 : (accum[c] > 16384) ? 16384 : accum[c];
-
-		samples--;
-	}
-}
+#ifdef SINGLE_CHANNEL_MIXER
+		accum /= M114S_OUTPUT_CHANNELS;
+		*buffer++ = (accum < -32768) ? -32768 : ((accum > 32767) ? 32767 : accum);
 #else
-/**********************************************************************************************
+		for (c = 0; c < M114S_OUTPUT_CHANNELS; c++)
+			*buffer[c]++ = (accum[c] < -32768) ? -32768 : ((accum[c] > 32767) ? 32767 : accum[c]);
+#endif
 
-     m114s_update -- update the sound chip so that it is in sync with CPU execution
-
-***********************************************************************************************/
-static void m114s_update(int num, INT16 **buffer, int samples)
-{
-	struct M114SChip *chip = &m114schip[num];
-	struct M114SChannel *channel;
-	INT16 sample;
-	int c;
-	while (samples > 0)
-	{
-		/* loop over channels - each channel write's to it's own output mixer channel  (not accurate for emulation)*/
-		for (c = 0; c < M114S_CHANNELS; c++)
-		{
-			sample = 0;
-			channel = &chip->channels[c];
-
-			/* Grab the next sample from the table data if the channel is active */
-			if(channel->active)	{
-				//We use Table 1 to drive everything, as Table 2 is really for mixing into Table 1..
-				sample = read_sample(channel, channel->table1.sample_rate, channel->table1.total_length);
-				*buffer[c]++ = sample;
-			}
-			else {
-			*buffer[c]++ = 0;
-			}
-		}
 		samples--;
 	}
 }
-#endif
 
 /**********************************************************************************************
 
@@ -477,9 +454,13 @@ INLINE void init_all_channels(struct M114SChip *chip)
 int M114S_sh_start(const struct MachineSound *msound)
 {
 	const struct M114Sinterface *intf = msound->sound_interface;
+#ifdef SINGLE_CHANNEL_MIXER 
+	char stream_name[40];
+#else
 	char stream_name[M114S_OUTPUT_CHANNELS][40];
 	const char *stream_name_ptrs[M114S_OUTPUT_CHANNELS];
 	int vol[M114S_OUTPUT_CHANNELS];
+#endif
 	int i,j;
 
 	/* create the volume table */
@@ -489,13 +470,6 @@ int M114S_sh_start(const struct MachineSound *msound)
 	memset(&m114schip, 0, sizeof(m114schip));
 	for (i = 0; i < intf->num; i++)
 	{
-		/* generate the name and create the stream */
-		for(j=0; j<M114S_OUTPUT_CHANNELS; j++) {
-			sprintf(stream_name[j], "%s #%d Ch%d",sound_name(msound),i,j);
-			stream_name_ptrs[j] = stream_name[j];
-			vol[j] = 25;
-		}
-
 		/* Chip specific setup based on clock speed */
 		switch(intf->baseclock[i]) {
 			// 4 Mhz
@@ -512,11 +486,18 @@ int M114S_sh_start(const struct MachineSound *msound)
 				return 1;
 		}
 
-		//If this value is not used, the pitch is wrong, why?!!
-		Machine->sample_rate = 44100;
-
-		/* create the stream */
-		m114schip[i].stream = stream_init_multi(M114S_OUTPUT_CHANNELS, stream_name_ptrs, vol, Machine->sample_rate, i, m114s_update);
+		/* generate the name and create the stream */
+#ifdef SINGLE_CHANNEL_MIXER 
+		sprintf(stream_name, "%s #%d", sound_name(msound), i);
+		m114schip[i].stream = stream_init(stream_name, 100, SAMPLE_RATE, i, m114s_update);
+#else
+		for (j = 0; j<M114S_OUTPUT_CHANNELS; j++) {
+			sprintf(stream_name[j], "%s #%d Ch%d", sound_name(msound), i, j);
+			stream_name_ptrs[j] = stream_name[j];
+			vol[j] = 100 / M114S_OUTPUT_CHANNELS;
+		}
+		m114schip[i].stream = stream_init_multi(M114S_OUTPUT_CHANNELS, stream_name_ptrs, vol, SAMPLE_RATE, i, m114s_update);
+#endif
 		if (m114schip[i].stream == -1)
 			return 1;
 
@@ -599,6 +580,7 @@ static void process_freq_codes(struct M114SChip *chip)
 			break;
 		default:
 			LOG(("* * Channel: %02d: Frequency Code: %02x - UNKNOWN * * \n",chip->channel,channel->regs.frequency));
+			break;
 	}
 }
 
@@ -654,11 +636,7 @@ static void process_channel_data(struct M114SChip *chip)
 		int t2start = (channel->regs.table2_addr<<5) & (~(lent2-1)&0x1fff);		//T2 Addr is upper 8 bits, but masked by length
 		int t2end = t2start + (lent2-1);
 		//Calculate initial frequency of both tables
-		double freq1, freq2;
-		freq1 = freq2 = freqtable4Mhz[channel->regs.frequency];
-		//Freq Table is based on 16 byte length & 1 pass read - adjust for length..
-		if(lent1>16) freq1 /= (double)(lent1/16);
-		if(lent2>16) freq2 /= (double)(lent2/16);
+		double freq = freqtable4Mhz[channel->regs.frequency];
 
 		//Adjust Start & Stop Address - Special case for table length of 16 - Bit 5 always 1 in this case
 		if(lent1 == 16) {
@@ -675,14 +653,10 @@ static void process_channel_data(struct M114SChip *chip)
 
 		//Adjust frequency if octave divisor set
 		if(channel->regs.oct_divisor)
-		{
-			freq1/=2.;
-			freq2/=2.;
-		}
+			freq /= 2.;
 
-		//Setup Sample Rate - Current Adjusted Frequency * the length of the table
-		channel->table1.sample_rate = (UINT32)(freq1 * lent1);
-		channel->table2.sample_rate = (UINT32)(freq2 * lent2);
+		// Setup Sample Rate/Step size increase
+		channel->incr = freq * ((double)(16u << FRAC_BITS) / SAMPLE_RATE);
 
 		//Assign start & stop address offsets to ROM
 		channel->table1.start_address = t1start;
@@ -724,9 +698,9 @@ static void process_channel_data(struct M114SChip *chip)
 if(channel->regs.outputs == 2) {
 	if(channel->regs.frequency == 0x70)
 	{
-		LOG(("orig: = %0f, freq1 = %0f, sample_rate = %0d \n",freqtable4Mhz[channel->regs.frequency],freq1,channel->table1.sample_rate));
+		LOG(("orig: = %0f, freq = %0f, incr = %0d \n",freqtable4Mhz[channel->regs.frequency],freq,channel->incr));
 	}
-		//printf("EOT=%d\n",channel->end_of_table);
+	//LOG(("EOT=%d\n",channel->end_of_table));
 	LOG(("C:%02d V:%02d FQ:%03x TS1:%02x TS2:%02x T1L:%04d T1R:%01d T2L:%04d T2R:%01d OD=%01d I:%02d E:%01d\n",
 		chip->channel,
 		channel->regs.atten,
@@ -835,6 +809,7 @@ static void m114s_data_write(struct M114SChip *chip, data8_t data)
 
 		default:
 			LOG(("M114S.C - logic error - too many bytes processed: %x\n",chip->bytes_read));
+			break;
 	}
 }
 
